[package]
name = "ash_test"
version = "0.1.0"
authors = ["shika-blyat <abdelzighem1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0-alpha5"
ash = "0.29.0"
pretty_env_logger = "0.3.1"
log = "0.4.8"